--- a/slides/02/02.md
+++ b/slides/02/02.md
@@ -1,7 +1,7 @@
 ---
 marp: true
 theme: design
-footer: '[Programação de Sistemas para Internet - Prof. Romerito Campos - 2025](https://rocampos.github.io/)'
+footer: '[Design Web - Prof. Romerito Campos - 2025](https://rocampos.github.io/)'
 _class: lead
 size: 16:9
 ---
