--- a/slides/js/04/04_2.md
+++ b/slides/js/04/04_2.md
@@ -177,7 +177,7 @@ console.log(portifolio.AAPL); // 50
 
 ## Inheritance (Herança)
 
-* Objetos possuem propriedades próprias e herdadas.
+* Objetos possuem propriedades próprias (***own properties***) e herdadas (***prototype properties***).
 * Atribuições afetam sempre o **objeto original**.
 
 ```js
