--- a/slides/js/04/04.md
+++ b/slides/js/04/04.md
@@ -1,8 +1,9 @@
 ---
 marp: true
 theme: design
-paginate: true
-
+footer: '[Programação de Sistemas para Internet - Prof. Romerito Campos - 2025](https://rocampos.github.io/)'
+_class: lead
+size: 16:9
 ---
 
 # Tipos de dados e Objetos
