--- a/slides/js/04/04_2.md
+++ b/slides/js/04/04_2.md
@@ -1,7 +1,9 @@
 ---
 marp: true
 theme: design
-paginate: true
+footer: '[Programação de Sistemas para Internet - Prof. Romerito Campos - 2025](https://rocampos.github.io/)'
+_class: lead
+size: 16:9
 ---
 
 # Objetos em JavaScript
