--- a/slides/js/05/05.md
+++ b/slides/js/05/05.md
@@ -140,7 +140,7 @@ console.log(d.valueOf()); // número de ms desde 1970
 
 ---
 
-## Sintase de objeto literal extendida
+## Sintaxe de objeto literal extendida
 
 ### Spread Operator (`...`)
 
